--- a/java110-project/src/main/webapp/css/common.css
+++ b/java110-project/src/main/webapp/css/common.css
@@ -6,28 +6,54 @@ header {
 }
 
 header > h1 {
-	margin: 0px;
-	float: left;
-    background: url('http://bitcamp.co.kr/img/logo2.jpg') no-repeat -26px 50%;
-    background-size: contain;
-    height:0;
+    margin: 0px;
+    float: left;
+    background: url('http://bitcamp.co.kr/img/logo2.jpg') no-repeat -25px 50%;
+    background-size: contain; 
+    height: 0;
     padding-top: 40px;
     overflow: hidden;
 }
 
-li {
-	float: right;
-	list-style: none;
-	display: inline-block;
-	margin: 0px 6px;
+header ul {
+    float: right;
 }
 
-footer{
-	background-color: aqua;
-	color: black;
+header li {
+    list-style: none;
+    display: inline-block;
+    margin: 0px 5px;
+}
+
+footer {
+    background-color: navy;
+    color: white;
 }
 
 footer > p {
-	padding: 8px;
+    padding: 10px;
 	text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
